[Docker and Spring run fixes] - Moved from ibm+maven docker image to fulling self-configured image. IBM's java has a problem on charset giving NPE; - Configured spring run